--- a/propertyapp/templates/about.html
+++ b/propertyapp/templates/about.html
@@ -11,7 +11,7 @@
       <div class="container">
         <div class="row justify-content-center align-items-center">
           <div class="col-lg-9 text-center mt-5">
-            <h1 class="heading" data-aos="fade-up">About</h1>
+            <h1 class="heading" data-aos="fade-up">About Us</h1>
 
             <nav
               aria-label="breadcrumb"
@@ -41,36 +41,46 @@
           </div>
           <div class="col-lg-6">
             <p class="text-black-50">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
-              enim pariatur similique debitis vel nisi qui reprehenderit totam?
-              Quod maiores.
+              Domina Homes PropertyListing is dedicated to simplifying the process of finding, buying, or selling properties.<br>
+              <br>
+               We bridge the gap between buyers, sellers, and agents by providing a seamless platform for property
+                listings. <br>
+                <br>
+                Whether you’re searching for your dream home, an investment property, 
+                or need expert real estate advice, Domina Homes is here to guide you every step of the way.<br>
+                <br>
+
+          With a commitment to trust and transparency, we prioritize client satisfaction, offering an extensive
+               portfolioof verified listings and expert guidance to help you make informed decisions.
             </p>
+            <div class="col-12">
+              <h2 class="font-weight-bold heading text-primary mb-4">Vision</h2>
+            </div>
             <p class="text-black-50">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni
-              saepe, explicabo nihil. Est, autem error cumque ipsum repellendus
-              veniam sed blanditiis unde ullam maxime veritatis perferendis
-              cupiditate, at non esse!
+              To be the leading property listing platform, empowering individuals and families to find their ideal homes effortlessly and confidently.
             </p>
+            <div class="col-12">
+              <h2 class="font-weight-bold heading text-primary mb-4">Mission</h2>
+            </div>
             <p class="text-black-50">
-              Enim, nisi labore exercitationem facere cupiditate nobis quod
-              autem veritatis quis minima expedita. Cumque odio illo iusto
-              reiciendis, labore impedit omnis, nihil aut atque, facilis
-              necessitatibus asperiores porro qui nam.
+              To connect people with reliable property solutions by providing a user-friendly platform, top-notch real estate services, and personalized support for a seamless property journey.
             </p>
           </div>
           <div class="col-lg-6">
+            <div class="col-12">
+              <h2 class="font-weight-bold heading text-primary mb-4">Goals</h2>
+            </div>
             <p class="text-black-50">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni
-              saepe, explicabo nihil. Est, autem error cumque ipsum repellendus
-              veniam sed blanditiis unde ullam maxime veritatis perferendis
-              cupiditate, at non esse!
-            </p>
-            <p class="text-black-50">
-              Enim, nisi labore exercitationem facere cupiditate nobis quod
-              autem veritatis quis minima expedita. Cumque odio illo iusto
-              reiciendis, labore impedit omnis, nihil aut atque, facilis
-              necessitatibus asperiores porro qui nam.
-            </p>
+              <ol>
+                <li><strong>Deliver Exceptional Service:</strong> Ensure every client experiences unparalleled professionalism
+                   and care.</li><br>
+                   <li><strong>Expand Our Reach: </strong> Continuously grow our portfolio of properties and services to cater to diverse client needs.</li><br>
+                    <li><strong>Foster Trust: </strong>  Build lasting relationships through honesty, transparency, and quality service.</li><br>
+                      <li><strong>Leverage Technology: </strong> Incorporate cutting-edge tools to simplify property searches and enhance user experience.</li><br>
+                        <li><strong>Support Communities:</strong>  Contribute to local communities by promoting sustainable housing solutions.</li><br>
+              </ol>
+             </p>
+            
           </div>
         </div>
       </div>
