--- a/propertyapp/templates/agent.html
+++ b/propertyapp/templates/agent.html
@@ -46,9 +46,7 @@
             Our Agents
           </h2>
           <p class="text-black-50">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
-            enim pariatur similique debitis vel nisi qui reprehenderit totam?
-            Quod maiores.
+          Our professional agents are committed to providing personalized guidance, ensuring a smooth and stress-free property journey.
           </p>
         </div>
       </div>
