--- a/propertyapp/templates/index.html
+++ b/propertyapp/templates/index.html
@@ -32,13 +32,14 @@
                   Effortless Property Search, Just for You
               </h1>
               <form
-                  action="#"
+                  action="{% url 'propertyapp:search_result' %}" method="get"
                   class="narrow-w form-search d-flex align-items-stretch mb-3"
                   data-aos="fade-up"
                   data-aos-delay="200"
               >
                   <input
                       type="text"
+                      name="query"
                       class="form-control px-4"
                       placeholder="Your ZIP code or City. e.g. Nairobi"
                   />
